--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,6 +24,7 @@
     --input: 240 5.9% 90%;
     --ring: 142.1 76.2% 36.3%;
     --radius: 0.5rem;
+    --previewContainer : 0 0.0% 23.5%;
   }
 
   .dark {
